[tool.poetry]
name = "encrypt-decrypt-fields"
version = "1.3.7"
description = "Encrypt and decrypt fields for a Django, SQLAlchemy ORM models or for direct use Crypto class"
authors = ["Denis Novikov <alpden550@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Framework :: Django :: 6",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
license = "MIT License"
homepage = 'https://github.com/alpden550/django-encrypt-decrypt'
repository = 'https://github.com/alpden550/django-encrypt-decrypt'
keywords = ["django", "django-orm", "cryptography", "development", "orm", "sqlachemy-orm"]

[tool.poetry.dependencies]
python = ">=3.12"
SQLAlchemy = "^1.4.19"
cryptography = "^46.0.5"
django = ">=5,<7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
